fixed some methods in MediaContentService and added new asynchronous operations for media content